# memo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
.ralph/: memo-architecture-refactor.md  memo-architecture-refactor.state.json
docs/adr/: 0001-group-by-project.md
src/: app.rs  footprint.rs  group.rs  main.rs  scanner.rs  top.rs  ui.rs
