[package]
name = "memo"
version = "0.1.0"
edition = "2024"
description = "Quick memory usage analysis — groups processes by app"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
regex = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
chrono = "0.4"
